enhance movie routes

--- a/src/app/shared/components/fragment/movie-carousel/movie-carousel.component.html
+++ b/src/app/shared/components/fragment/movie-carousel/movie-carousel.component.html
@@ -32,7 +32,7 @@
           </div>
           <div class="ml-4 space-y-2">
             <a
-              href="/detail/{{ movie.id }}"
+              href="/movie/{{ movie.id }}"
               class="hover:text-red-500 hover:cursor-pointer font-bold md:text-xl line-clamp-2"
             >
               {{ movie.title }}
