--- a/src/app/pages/movie-list/movie-list.component.html
+++ b/src/app/pages/movie-list/movie-list.component.html
@@ -1,5 +1,20 @@
 <section class="container pt-20">
-  <h3 [ngClass]="[hlmH3, 'mb-4']">List Movie</h3>
+  <header class="flex justify-between items-center mb-6">
+    <h2 [ngClass]="hlmH2">Movie List</h2>
+    <div>
+      <select (change)="handleSortBy($event)">
+        <option *ngFor="let sort of listOptions.sortBy" [value]="sort.value">
+          {{ sort.label }}
+        </option>
+      </select>
+      <select (change)="handleGenre($event)">
+        <option value="">All Genres</option>
+        <option *ngFor="let genre of listOptions.genres" [value]="genre.value">
+          {{ genre.label }}
+        </option>
+      </select>
+    </div>
+  </header>
   <main>
     <div
       *ngIf="loading"
