--- a/src/app/shared/components/fragment/movie-card/movie-card.component.html
+++ b/src/app/shared/components/fragment/movie-card/movie-card.component.html
@@ -26,7 +26,7 @@
   <div class="flex flex-col h-full p-4 space-y-2">
     <a
       href="/movie/{{ movie.id }}"
-      class="hover:text-red-500 hover:cursor-pointer font-bold md:text-xl line-clamp-2"
+      class="hover:text-red-500 hover:cursor-pointer font-bold text-lg md:text-xl line-clamp-2"
     >
       {{ movie.title }}
     </a>
