--- a/src/app/shared/components/fragment/header/header.component.html
+++ b/src/app/shared/components/fragment/header/header.component.html
@@ -27,8 +27,9 @@
           'text-xl p-4 transition',
           isActive('/movie') ? 'text-primary font-bold' : ''
         ]"
-        >Movies</a
       >
+        Movies
+      </a>
     </div>
   </div>
 </header>
