--- a/src/app/pages/movie-detail/movie-detail.component.html
+++ b/src/app/pages/movie-detail/movie-detail.component.html
@@ -9,8 +9,27 @@
   <div
     class="absolute top-0 w-full h-full bg-gradient-to-b from-background/75 to-95% to-background"
   ></div>
-  <div class="container relative z-10 w-full h-full flex flex-row">
-    <div class="hidden sm:block">
+  <div class="container relative z-10 w-full h-full flex flex-col md:flex-row">
+    <div class="md:hidden mb-4">
+      @if(movieDetailLoading) {
+      <hlm-skeleton class="w-[200px] h-[20px] mb-2" />
+      <div class="flex flex-row gap-4 mb-6">
+        <hlm-skeleton class="w-[10px] h-[28px]" />
+        <hlm-skeleton class="w-[10px] h-[28px]" />
+      </div>
+      } @else {
+      <h1 [ngClass]="[hlmH1, 'mb-2']">
+        {{ movieDetail.title }}
+      </h1>
+      <div class="text-lg font-semibold mb-6">
+        <span> {{ movieDetail.release_date | date : "MMMM YYYY" }}</span>
+        <span class="inline-block px-2"> • </span>
+        <span> {{ movieDetail.runtime | runtimeFormat }} </span>
+      </div>
+      }
+    </div>
+
+    <div class="flex justify-center">
       @if (movieDetailLoading) {
       <hlm-skeleton class="w-[300px] h-[450px] rounded-lg" />
       } @else {
@@ -25,7 +44,8 @@
       ></app-image>
       }
     </div>
-    <div class="pl-10 pt-5">
+
+    <div class="pl-0 md:pl-10 pt-5">
       @if(movieDetailLoading) {
       <hlm-skeleton class="w-[200px] h-[20px] mb-2" />
       <div class="flex flex-row gap-4 mb-6">
@@ -37,16 +57,16 @@
       <hlm-skeleton class="w-[250px] h-[20px]" />
       <hlm-skeleton class="w-[200px] h-[20px]" />
       } @else {
-      <h1 [ngClass]="[hlmH1, 'mb-2']">
+      <h1 [ngClass]="[hlmH1, 'mb-2 hidden md:block']">
         {{ movieDetail.title }}
       </h1>
-      <div class="text-lg font-semibold mb-6">
+      <div class="text-lg font-semibold mb-6 hidden md:block">
         <span> {{ movieDetail.release_date | date : "MMMM YYYY" }}</span>
         <span class="inline-block px-2"> • </span>
         <span> {{ movieDetail.runtime | runtimeFormat }} </span>
       </div>
       <div
-        class="flex flex-row items-center sm:flex-col md:flex-row gap-4 sm:gap-6 md:gap-4 mb-6"
+        class="flex flex-row md:flex-row items-center gap-4 sm:gap-6 md:gap-4 mb-6"
       >
         <div>
           <a
