--- a/src/app/shared/components/fragment/header/header.component.html
+++ b/src/app/shared/components/fragment/header/header.component.html
@@ -9,7 +9,7 @@
     <div
       class="font-extrabold text-2xl lg:text-2xl scroll-m-20 tracking-tight text-primary"
     >
-      <a href="/" class="text-foreground">Ng-Movie</a>
+      <a href="/" class="text-foreground">Ng-Animation</a>
     </div>
     <div class="hidden md:block">
       <app-header-menu></app-header-menu>
