--- a/src/app/shared/components/fragment/movie-card/movie-card.component.html
+++ b/src/app/shared/components/fragment/movie-card/movie-card.component.html
@@ -18,7 +18,7 @@
             : movieUrl + 'w220_and_h330_bestv2' + movie.poster_path
           : ''
       "
-      [alt]="'ng-movie-' + movie.title"
+      [alt]="'Ng-Animation - ' + movie.title"
       [fill]="true"
       [zoom]="true"
     ></app-image>
