--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 <footer class="bg-slate-900 text-white py-4">
   <div class="container mx-auto px-6 text-center">
     <div class="text-sm">
-      <p>&copy; 2025 Ng-Movie. All rights reserved.</p>
+      <p>&copy; 2025 Ng-Animation. All rights reserved.</p>
     </div>
   </div>
 </footer>
