--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -23,7 +23,18 @@
       Angular & Tailwind + Spartan
     </h1>
     <p [ngClass]="'text-base px-5 md:text-xl mb-4'">
-      The Movie App created with Angular and style with Tailwind + Spartan
+      The Movie App created with
+      <a href="http://angular.dev/" target="_blank" rel="noopener noopener">
+        Angular 19
+      </a>
+      and style with Tailwind
+      <a href="https://tailwindui.com/" target="_blank" rel="noopener noopener">
+        Tailwind
+      </a>
+      +
+      <a href="https://spartan.ng/" target="_blank" rel="noopener noopener">
+        Spartan Ui
+      </a>
     </p>
     <a
       href="https://github.com/cakrads/ng-movie"
