--- a/src/app/shared/components/fragment/movie-carousel/movie-carousel.component.html
+++ b/src/app/shared/components/fragment/movie-carousel/movie-carousel.component.html
@@ -13,7 +13,7 @@
           [alt]="movie.title"
           [width]="355"
           [height]="200"
-          class="rounded-lg overflow-hidden hover:cursor-pointer"
+          class="rounded-lg overflow-hidden"
         ></app-image>
         <a
           href="/movie/{{ movie.id }}"
